--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 anyhow = "1.0.100"
 axum = "0.8.6"
 chrono = { version = "0.4.42", features = ["serde"] }
+dashmap = "6.1.0"
 dotenvy = "0.15.7"
 reqwest = { version = "0.12.24", features = ["json"] }
 serde = { version = "1.0.228", features = ["derive"] }
